Added Get Hotels To Get All Hotels,Added Get Hotels by Owner ID,Fixed The ownerID Bug,Added pagination for responses,modified the database to have unique name with same ownerid
