# hotel/docs/swagger.json
@@ -9,10 +9,66 @@
         },
         "version": "1.0"
     },
-    "host": "127.0.0.1:8080",
+    "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
         "/hotels": {
+            "get": {
+                "description": "Get paginated list of hotels with filters",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "hotels"
+                ],
+                "summary": "Get hotels",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "City",
+                        "name": "city",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Country",
+                        "name": "country",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Room capacity",
+                        "name": "capacity",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Page number",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Page size",
+                        "name": "page_size",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/presenter.FullHotelResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/presenter.Response"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "Create a new hotel",
                 "consumes": [
@@ -46,37 +102,47 @@
                     "400": {
                         "description": "error: bad request",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/presenter.Response"
                         }
                     },
                     "500": {
                         "description": "error: internal server error",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/presenter.Response"
                         }
                     }
                 }
             }
         },
-        "/hotels/{id}": {
+        "/hotels/owner": {
             "get": {
-                "description": "Get a hotel by ID",
+                "description": "Get hotels by owner ID",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "hotels"
                 ],
-                "summary": "Get a hotel by ID",
+                "summary": "Get hotels by owner ID",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Hotel ID",
-                        "name": "id",
-                        "in": "path",
+                        "description": "Owner ID",
+                        "name": "owner_id",
+                        "in": "query",
                         "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Page number",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Page size",
+                        "name": "page_size",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -86,22 +152,16 @@
                             "$ref": "#/definitions/presenter.FullHotelResponse"
                         }
                     },
-                    "400": {
-                        "description": "error: bad request",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    },
                     "500": {
-                        "description": "error: internal server error",
+                        "description": "Internal Server Error",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/presenter.Response"
                         }
                     }
                 }
-            },
+            }
+        },
+        "/hotels/{id}": {
             "put": {
                 "description": "Update a hotel by ID",
                 "consumes": [
@@ -142,15 +202,13 @@
                     "400": {
                         "description": "error: bad request",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/presenter.Response"
                         }
                     },
                     "500": {
                         "description": "error: internal server error",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/presenter.Response"
                         }
                     }
                 }
@@ -180,21 +238,57 @@
                     "400": {
                         "description": "error: bad request",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/presenter.Response"
                         }
                     },
                     "500": {
                         "description": "error: internal server error",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/presenter.Response"
                         }
                     }
                 }
             }
         },
         "/rooms": {
+            "get": {
+                "description": "Get paginated list of rooms",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "rooms"
+                ],
+                "summary": "Get rooms",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Page number",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Page size",
+                        "name": "page_size",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/presenter.RoomResp"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/presenter.Response"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "Create a new room",
                 "consumes": [
@@ -228,62 +322,19 @@
                     "400": {
                         "description": "error: bad request",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/presenter.Response"
                         }
                     },
                     "500": {
                         "description": "error: internal server error",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/presenter.Response"
                         }
                     }
                 }
             }
         },
         "/rooms/{id}": {
-            "get": {
-                "description": "Get a room by ID",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "rooms"
-                ],
-                "summary": "Get a room by ID",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Room ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/presenter.RoomResp"
-                        }
-                    },
-                    "400": {
-                        "description": "error: bad request",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    },
-                    "500": {
-                        "description": "error: internal server error",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    }
-                }
-            },
             "put": {
                 "description": "Update a room by ID",
                 "consumes": [
@@ -324,22 +375,19 @@
                     "400": {
                         "description": "error: bad request",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/presenter.Response"
                         }
                     },
                     "404": {
                         "description": "error: bad request",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/presenter.Response"
                         }
                     },
                     "500": {
                         "description": "error: internal server error",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/presenter.Response"
                         }
                     }
                 }
@@ -369,15 +417,13 @@
                     "404": {
                         "description": "error: bad request",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/presenter.Response"
                         }
                     },
                     "500": {
                         "description": "error: internal server error",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/presenter.Response"
                         }
                     }
                 }
@@ -520,6 +566,21 @@
                 },
                 "userprice": {
                     "type": "integer"
+                }
+            }
+        },
+        "presenter.Response": {
+            "type": "object",
+            "properties": {
+                "data": {},
+                "error": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "success": {
+                    "type": "boolean"
                 }
             }
         },
