# hotel/internal/hotel/types.go
@@ -9,7 +9,9 @@ import (
 
 type Repo interface {
 	CreateHotel(ctx context.Context, hotel *Hotel) error
-	GetByID(ctx context.Context, id uint) (*Hotel, error)
+	GetHotels(ctx context.Context, city, country string, capacity, page, pageSize int) ([]Hotel, uint, error)
+	GetHotelsByOwnerID(ctx context.Context, ownerID uint, page, pageSize int) ([]Hotel, int, error)
+	GetHotelsByID(ctx context.Context, id uint) (*Hotel, error)
 	UpdateHotel(ctx context.Context, hotel *Hotel) error
 	DeleteHotel(ctx context.Context, id uint) error
 }
@@ -28,6 +30,7 @@ type Hotel struct {
 var (
 	ErrInvalidHotelName = errors.New("invalid hotel name: must be 1-100 characters long and can only contain alphanumeric characters, spaces, hyphens, underscores, and periods")
 	ErrInvalidName      = errors.New("invalid city or country name : only alphabetic will be accepted")
+	ErrInvalidCapacity  = errors.New("invalid capacity")
 )
 
 func ValidateHotelName(name string) error {
@@ -42,6 +45,12 @@ func ValidateName(name string) error {
 	var validName = regexp.MustCompile(`^[a-zA-Z\s]+$`)
 	if !validName.MatchString(name) {
 		return ErrInvalidName
+	}
+	return nil
+}
+func ValidateCapacity(number int) error {
+	if number<=0 {
+		return ErrInvalidCapacity
 	}
 	return nil
 }
