# hotel/internal/room/types.go
@@ -8,7 +8,7 @@ import (
 
 type Repo interface {
 	CreateRoom(ctx context.Context, room *Room) (*Room, error)
-	GetByID(ctx context.Context, id uint) (*Room, error)
+	GetRooms(ctx context.Context, page, pageSize int) ([]Room, int, error)
 	UpdateRoom(ctx context.Context, room *Room) (*Room, error)
 	DeleteRoom(ctx context.Context, id uint) error
 }
@@ -26,8 +26,15 @@ type Room struct {
 
 var (
 	ErrInvalidName = errors.New("invalid room name: must be 1-100 characters long and can only contain alphanumeric characters, spaces, hyphens, underscores, and periods")
+	ErrPrice = errors.New("user price should be bigger than agency price")
 )
-
+func ValidatePrice (userprice,agencyprice uint) error{
+	check:= agencyprice > userprice
+	if !check {
+		return ErrPrice
+	}
+	return nil
+}
 func ValidateRoomName(name string) error {
 	var validRoomName = regexp.MustCompile(`^[a-zA-Z0-9 ._-]{1,100}$`)
 	if !validRoomName.MatchString(name) {
