# hotel/pkg/adapters/storage/entities/hotel.go
@@ -4,11 +4,11 @@ import "gorm.io/gorm"
 
 type Hotel struct {
 	gorm.Model
-	OwnerID		  uint
-	Name          string
-	City          string
-	Country       string
-	Details       string
-	IsBlocked     bool
-	Rooms         []Room
+	OwnerID      uint   `gorm:"uniqueIndex:idx_owner_name"`
+	Name         string `gorm:"uniqueIndex:idx_owner_name"`
+	City         string
+	Country      string
+	Details      string
+	IsBlocked    bool
+	Rooms        []Room
 }
